--- a/TaburetkaProject/packages.config
+++ b/TaburetkaProject/packages.config
@@ -4,5 +4,6 @@
   <package id="cef.redist.x86" version="102.0.10" targetFramework="net472" />
   <package id="CefSharp.Common" version="102.0.100" targetFramework="net472" />
   <package id="CefSharp.Wpf" version="102.0.100" targetFramework="net472" />
+  <package id="FontAwesome.Sharp" version="5.15.4" targetFramework="net472" />
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
 </packages>
