--- a/TaburetkaProject/packages.config
+++ b/TaburetkaProject/packages.config
@@ -6,4 +6,6 @@
   <package id="CefSharp.Wpf" version="102.0.100" targetFramework="net472" />
   <package id="DotLiquid" version="2.2.656" targetFramework="net472" />
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
+  <package id="FontAwesome.Sharp" version="5.15.4" targetFramework="net472" />
+  <package id="DotLiquid" version="2.2.656" targetFramework="net472" />
 </packages>
