--- a/TaburetkaProject/packages.config
+++ b/TaburetkaProject/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="cef.redist.x64" version="102.0.10" targetFramework="net472" />
+  <package id="cef.redist.x86" version="102.0.10" targetFramework="net472" />
+  <package id="CefSharp.Common" version="102.0.100" targetFramework="net472" />
+  <package id="CefSharp.Wpf" version="102.0.100" targetFramework="net472" />
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0-preview.5.22301.12" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.2-beta1" targetFramework="net472" />
