--- a/DesignTaburetka/packages.config
+++ b/DesignTaburetka/packages.config
@@ -9,7 +9,7 @@
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0-preview.5.22301.12" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="13.0.2-beta1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
