Manager, sdelayte okno plz

--- a/DesignTaburetka/DesignTaburetka.csproj
+++ b/DesignTaburetka/DesignTaburetka.csproj
@@ -149,11 +149,17 @@
     <Compile Include="Pages\OrderTask.xaml.cs">
       <DependentUpon>OrderTask.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\TeamDepartment.xaml.cs">
+      <DependentUpon>TeamDepartment.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\WindowAddClient.xaml.cs">
       <DependentUpon>WindowAddClient.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\WindowAddOrder.xaml.cs">
       <DependentUpon>WindowAddOrder.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\WindowAddWorker.xaml.cs">
+      <DependentUpon>WindowAddWorker.xaml</DependentUpon>
     </Compile>
     <Compile Include="WorkerUslugi.xaml.cs">
       <DependentUpon>WorkerUslugi.xaml</DependentUpon>
@@ -224,6 +230,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\TeamDepartment.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\ToDo.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -233,6 +243,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\WindowAddOrder.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\WindowAddWorker.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
